# mobile-manipulation-scout-rebel

./: .gitignore  README.md
button_presser/: CMakeLists.txt  README.md  button_presser_demo_script.sh  package.xml
button_presser/include/: button_presser.hpp  button_presser_action_servers.hpp
button_presser/launch/: button_press_demo.launch.py  test_button_pose_computation.launch.py
button_presser/src/: button_presser.cpp  button_presser_action_servers.cpp  button_presser_main_demo.cpp
client_demos/: CMakeLists.txt  README.md  package.xml  park_and_buttonpress.sh
client_demos/include/: mobile_object_picking.hpp  park_and_button_press.hpp  park_and_interact.hpp
client_demos/launch/: mobile_object_picking_demo.launch.py  multiple_aruco_nodes.launch.py  navigate_and_button_press_demo.launch.py  park_and_button_press_demo.launch.py
client_demos/src/: mobile_object_picking.cpp  park_and_button_press.cpp  park_and_interact.cpp
mobile_manipulation_interfaces/: CMakeLists.txt  README.md  package.xml
mobile_manipulation_interfaces/action/: Dropping.action  Parking.action  Picking.action
mobile_manipulation_interfaces/msg/: ObjectCoords.msg  ObjectDetections.msg
moveit2_api/: CMakeLists.txt  README.md  package.xml
moveit2_api/include/: moveit2_apis.hpp
moveit2_api/src/: moveit2_apis.cpp
moveit2_servers/: CMakeLists.txt  README.md  button_presser_demo_script.sh  package.xml
moveit2_servers/include/: button_presser.hpp  button_presser_action_servers.hpp  moveit2_apis.hpp
moveit2_servers/launch/: button_press_demo.launch.py  test_button_pose_computation.launch.py
moveit2_servers/src/: button_presser.cpp  button_presser_action_servers.cpp  button_presser_main_demo.cpp  moveit2_apis.cpp
moveit2_servers/test/: test_button_pose_computation.cpp
multi_aruco_plane_detection/: README.md  package.xml
multi_aruco_plane_detection/include/: multi_aruco_plane_detection.hpp
multi_aruco_plane_detection/launch/: multi_aruco_plane_detection.launch.py  multiple_aruco_nodes.launch.py
multi_aruco_plane_detection/rviz/: multi_aruco.rviz
nav2_servers/: CMakeLists.txt  README.md  package.xml
nav2_servers/config/: waypoints.yaml
nav2_servers/launch/: parking_demo.launch.py
nav2_servers/nav2_servers/: footprint_collision_checker.py  park_robot.py
nav2_servers/scripts/: parking_demo.py  robot_parking_action_server.py
object_detection/: CMakeLists.txt  README.md  package.xml
object_detection/launch/: ball_detection.launch.py  dataset_collector.launch.py  object_detection.launch.py
object_detection/notebooks/: yolov8.ipynb
object_detection/scripts/: ball_detector.py  dataset_collector.py  yolov8_detector.py
soft_grasping/: CMakeLists.txt  README.md  package.xml
soft_grasping/config/: params.yaml
soft_grasping/include/: ball_perception.hpp  grasp_action_servers.hpp  grasp_autonomous.hpp  grasp_pose_estimator.hpp  grasp_with_click.hpp
soft_grasping/launch/: grasp_autonomously.launch.py  grasp_with_input_click.launch.py  target_click.launch.py
soft_grasping/rviz/: target_click.rviz  target_detection.rviz
soft_grasping/scripts/: target_click.py
soft_grasping/src/: ball_perception.cpp  grasp_action_servers.cpp  grasp_autonomous.cpp  grasp_pose_estimator.cpp  grasp_with_click.cpp  grasping_main.cpp  main_grasp_autonomous.cpp  main_grasp_with_input_click.cpp
