<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>object_detection</name>
	<version>0.1.0</version>
	<description>
		ROS2 package wrapping a node for dataset collection. The node subscribes to the RGB images topic and writes to
        disk one image collected every second.
	</description>

	<maintainer email="simone.giampa@mail.polimi.it">Simone Giampà</maintainer>
    <license>AIRLAB</license>
    <url type="website">polimi.it</url>
    <url type="repository">https://github.com/AIRLab-POLIMI/mobile-manipulation-scout-rebel</url>
    <author email="simone.giampa@mail.polimi.it">Simone Giampà</author>

	<buildtool_depend>ament_cmake</buildtool_depend>
	<buildtool_depend>ament_cmake_python</buildtool_depend>


	<depend>rclcpp</depend>
	<depend>rclpy</depend>
	<depend>std_msgs</depend>
	<depend>geometry_msgs</depend>
	
	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	
	<export>
		<build_type>ament_cmake</build_type>
	</export>
</package>